tdf#61076 string validation on creation of new dictionary.

Prevent having '/' or '\' within the dictionary name to prevent data
loss.

Change-Id: I392832c748effcdbbe58983a788ba6b38764628c